# pyaccord

./: .gitignore  DiscordAPIClient.py  LICENSE  README.md  __init__.py  channel.py  client.py  guild.py  permissions.py  pyproject.toml  requirements.txt  role.py  setup.py  temp_test.py
.github/scripts/: version-check.sh
.github/workflows/: lint-python.yml  pull-checks.yaml  tests.yml
src/pyaccord/: DiscordUserAPI.py  __init__.py  channel.py  client.py  exceptions.py  guild.py  invite.py  role.py  user.py
tests/: test_sanity.py
types/: guild.py  user.py
