[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaccord"
authors = [
    { name="Grant Wilson", email="development@grantmwilson.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = ""
dynamic = ["version"]
dependencies = [
    "requests>=2.28",
    "oauthlib"
]

[tool]

[tool.hatch.version]
path = "src/pyaccord/__about__.py"
